--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test</title>
+	<title>RÜMEYSANIN MUTFAĞI</title>
 </head>
 <body>
  
- best
+ EN İYİ TARİFLER
 
 </body>
 </html>
